--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.16.5",
+    "@material-ui/core": "^4.12.3",
+    "@types/react": "^16.8.6 || ^17.0.0",
     "react": "17.0.2",
     "react-bootstrap": "2.0.4",
     "react-dom": "17.0.2"
