--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.16.5",
-    "@material-ui/core": "^4.12.3",
-    "@types/react": "^16.8.6 || ^17.0.0",
+    "@babel/core": "7.16.5",
+    "@babel/runtime": "7.16.5",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "5.2.5",
+    "@types/react": "17.0.37",
     "react": "17.0.2",
     "react-bootstrap": "2.0.4",
     "react-dom": "17.0.2"
